# pgnats

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  README.md  build.rs  generate_test_certs.sh  pgnats.control  pgsql-nats-alt.spec  pgsql-nats-mosos.spec  pgsql-nats.spec  rustfmt.toml
.github/workflows/: rust.yml
docs/: 404.html  configuration.html  functions.html  index.html  initialization.html  installation.html  linux.html  macos.html  packaging.html  print.html  searcher-c2a407aa.js  searchindex-0ca935cf.js  windows.html
docs/functions/: config.html  key-value.html  meta.html  object-store.html  publish.html  request.html  subscribe.html
docs/src/functions/: subscribe.md
pkgBuild/ALSE1.7/: control  rules
pkgBuild/ALSE1.7-certified/: control  rules
pkgBuild/ALSE1.8/: changelog  control  rules
pkgBuild/ALSE1.8-certified/: control  rules
pkgBuild/ALT/: pgsql-nats.spec
pkgBuild/RPM/: pgsql-nats.spec
pkgBuild/debian/: control  rules
pkgBuild/debian1.7/: changelog  control  copyright  rules
pkgBuild/debian1.8/: changelog  control  copyright  rules
pkgBuild/rpmBuild/: alt.apt-preference  pgsql-nats-alt.spec  pgsql-nats-mosos.spec  pgsql-nats.spec
sql/: pgnats--1.0.0--1.1.0.sql  pgnats--1.0.0.sql
src/: api.rs  bg_subscribtion.rs  bg_subscription.rs  bgw_tests.rs  config.rs  connection.rs  constants.rs  ctx.rs  dsm.rs  errors.rs  fdw.rs  funcs.rs  init.rs  lib.rs  log.rs  nats_client.rs  notification.rs  pgnats_tests.rs  ring_queue.rs  shared.rs  shared_queue.rs  shm.rs  tests.rs  utils.rs  worker_queue.rs
src/api/: config.rs  conv.rs  internal.rs  macros.rs  mod.rs  nats.rs  types.rs
src/bgw/: context.rs  export.rs  fdw.rs  mod.rs  notification.rs  posgres.rs  ring_queue.rs  run.rs
src/bgw/launcher/: context.rs  message.rs  mod.rs  pg_api.rs  worker_entry.rs
src/bgw/pgrx_wrappers/: dsm.rs  mod.rs  shm_mq.rs
src/bgw/subscriber/: context.rs  message.rs  mod.rs  nats.rs  pg_api.rs
src/bgw_old/: native.rs  posgres.rs  run.rs
src/pg_tests/: api_tests.rs  bgw_tests.rs  macros.rs  mod.rs  shm_mq_tests.rs
tests/: nats_tests.rs  pgnats_tests.rs
tests/certs/: ca.crt  server.crt  server.key
